--- a/index.html
+++ b/index.html
@@ -4,70 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CoolKidZ</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-image: url('https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8YXJ0fGVufDB8fDB8fHww');
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-    }
-    .buttons {
-      display: flex;
-      align-items: center;
-    }
-    .buttons button {
-      background-color: green;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      margin-right: 10px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    .buttons button:hover {
-      background-color: darkgreen;
-    }
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding: 10px 20px;
-      background: rgba(255, 255, 255, 0.6);
-    }
-    .header h1 {
-      margin: 0;
-      font-size: 24px;
-      color: #333;
-    }
-    .file-input {
-      display: none;
-    }
-    .hidden {
-      display: none;
-    }
-    .welcome-message {
-      font-size: 18px;
-      color: green;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <div class="header">
     <h1 id="coolkidZHeading" onclick="refreshPage()">CoolKidZ</h1>
     <div class="buttons">
-      <button id="signInButton" onclick="signIn()">Sign In</button>
+      <button id="signUpButton" onclick="showSignUp()">Sign Up</button>
+      <button id="signInButton" onclick="showSignIn()">Sign In</button>
       <button id="logOutButton" class="hidden" onclick="logOut()">Log Out</button>
       <button id="addVideoButton" class="hidden" onclick="addVideo()">Add Video</button>
     </div>
@@ -75,80 +19,24 @@
 
   <div class="container">
     <div id="welcomeMessage" class="welcome-message hidden"></div>
-    <input type="file" id="fileInput" class="file-input" accept="video/mp4" onchange="handleFileSelect(event)">
+    
+    <div id="loginForm" class="hidden">
+      <h2>Log In</h2>
+      <input type="text" id="usernameInput" placeholder="Enter username" />
+      <input type="password" id="passwordInput" placeholder="Enter password" />
+      <button onclick="logIn()">Log In</button>
+    </div>
+
+    <div id="signUpForm" class="hidden">
+      <h2>Sign Up</h2>
+      <input type="text" id="newUsernameInput" placeholder="Choose a username" />
+      <input type="password" id="newPasswordInput" placeholder="Choose a password" />
+      <button onclick="signUp()">Sign Up</button>
+    </div>
+
+    <div id="videosContainer" class="videosContainer"></div> <!-- Container to hold videos -->
   </div>
 
-  <script>
-    // Simulate user login status
-    let loggedIn = false;
-    let username = "";
-
-    // Sign In Function
-    function signIn() {
-      // Simulate a registration form (for now, we use prompt)
-      username = prompt("Enter your username:");
-      if (username) {
-        loggedIn = true;
-        updateUI();
-        alert("Welcome " + username);
-      }
-    }
-
-    // Log Out Function
-    function logOut() {
-      loggedIn = false;
-      username = "";
-      updateUI();
-      alert("You have logged out.");
-    }
-
-    // Update UI based on login status
-    function updateUI() {
-      if (loggedIn) {
-        document.getElementById("signInButton").classList.add("hidden");
-        document.getElementById("logOutButton").classList.remove("hidden");
-        document.getElementById("addVideoButton").classList.remove("hidden");
-        document.getElementById("welcomeMessage").classList.remove("hidden");
-        document.getElementById("welcomeMessage").textContent = "Welcome, " + username;
-      } else {
-        document.getElementById("signInButton").classList.remove("hidden");
-        document.getElementById("logOutButton").classList.add("hidden");
-        document.getElementById("addVideoButton").classList.add("hidden");
-        document.getElementById("welcomeMessage").classList.add("hidden");
-      }
-    }
-
-    // Add Video Function
-    function addVideo() {
-      const choice = prompt("Do you want to upload a video file or provide a URL? (file/url)");
-      if (choice.toLowerCase() === "file") {
-        document.getElementById("fileInput").click(); // Trigger file input
-      } else if (choice.toLowerCase() === "url") {
-        const url = prompt("Enter the video URL:");
-        alert("Video URL entered: " + url);
-      } else {
-        alert("Invalid choice. Please enter 'file' or 'url'.");
-      }
-    }
-
-    // Handle file selection
-    function handleFileSelect(event) {
-      const file = event.target.files[0];
-      if (file && file.type === "video/mp4") {
-        alert("Video file selected: " + file.name);
-      } else {
-        alert("Please select an MP4 file.");
-      }
-    }
-
-    // Refresh the page when clicking on CoolKidZ heading
-    function refreshPage() {
-      location.reload();
-    }
-
-    // Update UI on page load
-    updateUI();
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
