--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button id="signUpButton" onclick="showSignUp()">Sign Up</button>
       <button id="signInButton" onclick="showSignIn()">Sign In</button>
       <button id="logOutButton" class="hidden" onclick="logOut()">Log Out</button>
-      <button id="addVideoButton" class="hidden" onclick="addVideo()">Add Video</button>
+      <button id="addVideoButton" class="hidden" onclick="addMedia()">Add Media</button>
     </div>
   </div>
 
@@ -34,9 +34,9 @@
       <button onclick="signUp()">Sign Up</button>
     </div>
 
-    <div id="videosContainer" class="videosContainer"></div> <!-- Container to hold videos -->
+    <div id="mediaContainer" class="media-container"></div> <!-- Container to hold videos/images -->
   </div>
 
-  <script src="script.js"></script>
+  <script src="combined.js"></script>
 </body>
 </html>
