--- a/index.html
+++ b/index.html
@@ -13,28 +13,31 @@
       <button id="signUpButton" onclick="showSignUp()">Sign Up</button>
       <button id="signInButton" onclick="showSignIn()">Sign In</button>
       <button id="logOutButton" class="hidden" onclick="logOut()">Log Out</button>
-      <button id="addVideoButton" class="hidden" onclick="addMedia()">Add Media</button>
+      <button id="addMediaButton" class="hidden" onclick="addMedia()">Add Media</button>
     </div>
   </div>
 
   <div class="container">
     <div id="welcomeMessage" class="welcome-message hidden"></div>
     
-    <div id="loginForm" class="hidden">
+    <!-- Sign In Form -->
+    <div id="loginForm" class="form-box hidden">
       <h2>Log In</h2>
       <input type="text" id="usernameInput" placeholder="Enter username" />
       <input type="password" id="passwordInput" placeholder="Enter password" />
       <button onclick="logIn()">Log In</button>
     </div>
 
-    <div id="signUpForm" class="hidden">
+    <!-- Sign Up Form -->
+    <div id="signUpForm" class="form-box hidden">
       <h2>Sign Up</h2>
       <input type="text" id="newUsernameInput" placeholder="Choose a username" />
       <input type="password" id="newPasswordInput" placeholder="Choose a password" />
       <button onclick="signUp()">Sign Up</button>
     </div>
 
-    <div id="mediaContainer" class="media-container"></div> <!-- Container to hold videos/images -->
+    <!-- Media Container -->
+    <div id="mediaContainer" class="media-container"></div>
   </div>
 
   <script src="combined.js"></script>
